<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:fitsSystemWindows="true" />
            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                mapbox:mapbox_cameraTargetLat="55.944"
                mapbox:mapbox_cameraTargetLng="-3.188396"
                mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
                mapbox:mapbox_cameraZoom="15" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/drawer_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@color/colorAccent"
        >
        <TextView
            android:id="@+id/drawer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:fontFamily="cursive"
            android:padding="50dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            />
        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/drawer_menu"
            />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>