<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PeopleFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_email_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/fab_send_coin"
                android:background="@drawable/rect_oval_white"
                android:elevation="2dp"
                android:hint="@string/input_your_friend_email"
                android:padding="8dp" />

           <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/imageView_email_search"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_alignEnd="@id/editText_email_search"
                android:elevation="2dp"
                app:srcCompat="@drawable/ic_search_black_24dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:text="@string/people_playing" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/click_check" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="14dp"
            android:id="@+id/recycler_view_people"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</FrameLayout>